--- a/Spark-ui/package.json
+++ b/Spark-ui/package.json
@@ -14,7 +14,8 @@
     "test:ci": "npm run lint && npm run test:unit"
   },
   "dependencies": {
-    "axios": "0.18.1",
+    "@riophae/vue-treeselect": "^0.4.0",
+    "axios": "^0.21.1",
     "core-js": "3.6.5",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
@@ -23,6 +24,7 @@
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
+    "vue-treeselect": "^1.0.7",
     "vuex": "3.1.0"
   },
   "devDependencies": {
